--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,24 @@
   text-align: center;
 }
 
+.posdi{
+  display: flex;
+  justify-content: center;
+  
+
+}
+
+.pos{
+  list-style: none;
+
+}
+.posul{
+  display: flex;
+  flex-direction: column;
+  justify-content:flex-start;
+  align-items: center;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
